# ironcrew

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  feature_request.md  remediation-plan.md  renovate.json  review.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
docker/: runtime.Dockerfile
docs/: agents.md  architecture.md  best-practices.md  chat.md  cli.md  cloud-deployment.md  crews.md  http-scaling.md  providers.md  rest-api.md  sandbox.md  storage.md  tasks.md  tools.md
examples/agent-as-tool/: README.md  crew.lua
examples/anthropic/: crew-thinking.lua  crew-websearch.lua  crew.lua
examples/batch-processing/: crew.lua
examples/chat-cli/: README.md  crew.lua
examples/chat-http/: README.md  crew.lua
examples/chat-ui/: README.md  package.json
examples/collaborative/: crew.lua
examples/conditional-crew/: crew.lua
examples/config-lua/: config.lua  crew.lua
examples/conversation/: crew.lua
examples/cross-run-persistence/: README.md  crew.lua
examples/dialog-early-stop/: crew.lua
examples/foreach/: crew.lua
examples/gemini/: crew.lua
examples/graph-prototype/: index.html
examples/groq-json/: crew.lua
examples/http-api/: crew.lua
examples/json-output/: crew.lua
examples/memory/: crew.lua
examples/model-router/: crew.lua
examples/moderator-dialog/: crew.lua
examples/parallel/: crew.lua
examples/providers/: 01-openai-chat.lua  02-openai-responses.lua  03-openai-responses-reasoning.lua  04-openai-responses-websearch.lua  05-anthropic.lua  06-anthropic-websearch.lua  07-anthropic-thinking.lua  08-gemini.lua  09-groq.lua  10-kimi.lua  11-kimi-thinking.lua  12-deepseek.lua
examples/research-crew/: crew.lua
examples/responses/: crew-reasoning.lua  crew-websearch.lua  crew.lua
examples/roundtable/: crew.lua
examples/shared-modules/: README.md  crew.lua  report.lua
examples/simple/: crew.lua
examples/stock-debate/: crew.lua
examples/streaming/: crew.lua
examples/subflow_stub/: crew.lua
examples/subworkflow/: crew.lua
examples/vision/: .env.template  crew.lua
src/: lib.rs  main.rs
src/api/: audit.rs  auth.rs  conversations.rs  handlers.rs  mod.rs
src/cli/: chat.rs  commands.rs  graph.rs  graph_bundle.rs  graph_extract.rs  graph_types.rs  history.rs  mod.rs  project.rs  server.rs
src/engine/: agent.rs  audit.rs  collaborative.rs  condition.rs  crew.rs  eventbus.rs  executor.rs  foreach.rs  interpolate.rs  memory.rs  messagebus.rs  mod.rs  model_router.rs  orchestrator.rs  postgres_store.rs  reconciler.rs  run_history.rs  runtime.rs  sessions.rs  sqlite_store.rs  store.rs  task.rs  task_runner.rs
src/llm/: anthropic.rs  image.rs  mod.rs  openai.rs  openai_responses.rs  provider.rs
src/lua/: agent_turn.rs  api.rs  conversation.rs  crew_userdata.rs  crypto.rs  dialog.rs  json.rs  loader.rs  mod.rs  parsers.rs  require.rs  sandbox.rs  subflow.rs
src/mcp/: bridge.rs  client.rs  config.rs  manager.rs  mod.rs
src/tools/: agent_as_tool.rs  file_read.rs  file_read_glob.rs  file_write.rs  hash.rs  http_request.rs  lua_tool.rs  mod.rs  registry.rs  shell.rs  template_render.rs  validate_schema.rs  web_scrape.rs
src/utils/: error.rs  (+3 more)
tests/: agent_as_tool_test.rs  agent_selection_test.rs  agent_turn_test.rs  api_test.rs  chat_handle_test.rs  conversation_list_test.rs  cross_flow_isolation_test.rs  file_read_test.rs  graph_test.rs  http_audit_test.rs  interpolate_test.rs  ironcrew_mode_test.rs  loader_test.rs  mcp_http_live_test.rs  memory_test.rs  messagebus_test.rs  model_router_test.rs  registry_test.rs  require_test.rs  reserved_prefix_test.rs  run_history_test.rs  run_reconciler_test.rs  sessions_test.rs  sqlite_store_test.rs  subflow_test.rs  task_graph_test.rs  tools_test.rs
(+35 files in other folders)
