[package]
name = "ironcrew"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.11.6", features = ["lua54", "async", "send", "serialize", "vendored"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
scraper = "0.25"
dotenvy = "0.15"
thiserror = "2"
async-trait = "0.1"
url = "2"

[dev-dependencies]
tempfile = "3"
