[package]
name = "ironcrew"
version = "1.9.6"
edition = "2024"
description = "A runtime for Lua-defined AI agent crews"
license = "MIT"
repository = "https://github.com/skitsanos/ironcrew"
keywords = ["ai", "agents", "lua", "crew", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ironcrew"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
mlua = { version = "0.11.6", features = ["lua54", "async", "send", "serialize", "vendored"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
scraper = "0.26"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "2"
async-trait = "0.1"
url = "2"
sha2 = "0.10"
md-5 = "0.10"
tera = "1"
jsonschema = "0.45"
glob = "0.3"
regex = "1"
futures = "0.3"
async-stream = "0.3"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
