[package]
name = "ironcrew"
version = "2.13.0"
edition = "2024"
description = "A runtime for Lua-defined AI agent crews"
license = "MIT"
repository = "https://github.com/skitsanos/ironcrew"
keywords = ["ai", "agents", "lua", "crew", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ironcrew"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
mlua = { version = "0.11.6", features = ["lua54", "async", "send", "serialize", "vendored"] }
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6.1", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
scraper = "0.26"
dotenvy = "0.15.7"
uuid = { version = "1.23.1", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
base64 = "0.22.1"
thiserror = "2.0.18"
async-trait = "0.1.89"
url = "2.5.8"
sha2 = "0.11"
md-5 = "0.11"
tera = "1.20.1"
jsonschema = "0.46.1"
glob = "0.3.3"
regex = "1.12.3"
futures = "0.3.32"
async-stream = "0.3.6"
axum = "0.8.9"
rusqlite = { version = "0.39", features = ["bundled"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres"], optional = true }
tower-http = { version = "0.6.8", features = ["cors"] }
rmcp = { version = "1.5.0", optional = true, default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "tower"] }

[features]
default = ["postgres", "mcp"]
postgres = ["sqlx"]
mcp = ["dep:rmcp"]

[dev-dependencies]
tempfile = "3.27.0"
